# actixweb.2022

./: .env  .gitignore  Cargo.toml  Procfile  phonebook.db
db/: db.sql
src/: api.rs  appstate.rs  db.rs  lib.rs  main.rs  model.rs
tests/: integration.rs
