[package]
name = "fullstack_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~4"
actix-files = "~0"
env_logger = "~0"
log = "~0"
mime = "~0"
#sqlx = { version = "~0", features = ["runtime-actix-rustls", "sqlite", "offline"] }
serde = { version = "~1.0", features = ["derive"] }
dotenv = "~0"
etag = "~3"
serde_json = "~1"
rayon = "~1"
r2d2 = { version = "~0" }
r2d2_sqlite = { version = "~0", features = ["bundled"] }

[dev-dependencies]
pretty_assertions = "~1"